# uipf

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md
code/: CMakeLists.txt  README.md  paths.cpp.in
code/cmake/: BoostHelper.cmake  FindCGAL.cmake
code/console/: CMakeLists.txt  main.cpp  paths.cpp.in
code/framework/types/: Data.cpp  Data.hpp
code/gui/: CMakeLists.txt  GUIEventDispatcher.hpp  GuiLogger.cpp  GuiLogger.hpp  GuiVisualizationContext.cpp  GuiVisualizationContext.hpp  ImageWindow.cpp  ImageWindow.hpp  MainWindow.cpp  MainWindow.hpp  RunControl.cpp  RunControl.hpp  RunWorkerThread.cpp  RunWorkerThread.h  main-gui.cpp  mainwindow.ui
code/gui/graph/: graphwidget.cpp  graphwidget.h  node.cpp  node.h
code/gui/models/: InputsDelegate.cpp  InputsDelegate.hpp  ParamsModel.cpp  ParamsModel.hpp
code/libuipf/: CMakeLists.txt
code/libuipf-geomview/: CMakeLists.txt  README.md  geomview.cpp  geomview.hpp
code/libuipf-geomview/tests/: demo.cpp  points3.txt  test.cpp
code/libuipf/src/: Data.cpp  Module.cpp  ModuleInterface.cpp  ModuleLoader.cpp  ModuleLoader.hpp  ModuleManager.hpp  ModuleMetaData.cpp  ProcessingChain.cpp  ProcessingChain.hpp  Runner.cpp  Runner.hpp  logging.cpp  util.cpp  util.hpp
code/libuipf/src/data/: opencv.cpp
code/libuipf/src/include/: Data.hpp  Module.hpp  ModuleInterface.hpp  ModuleLoader.hpp  ModuleMetaData.hpp  ProcessingChain.hpp  RunContext.hpp  Runner.hpp  VisualizationContext.hpp  data.hpp  exceptions.hpp  logging.hpp  util.hpp
code/libuipf/src/include/data/: list.hpp  map.hpp  opencv.hpp  std.hpp
code/libuipf/test/integration/compiler-clang/: ClangModule.cpp  Makefile
code/libuipf/test/integration/compiler-gcc/: GccModule.cpp  Makefile
code/libuipf/test/integration/dataflow/: CMakeLists.txt  ConsumerModule.cpp  ProducerModule.cpp  run.sh  test.yml
code/libuipf/test/unit/: data.cpp  module.cpp  module_loader.cpp  processing_chain.cpp  processing_chain.yaml
code/libuipf/test/unit/libuipf/: data.cpp
code/modules/: CMakeLists.txt
code/modules/dummy/: LongRunningDummyModule.cpp
code/modules/improc/: ConvolutionModule.cpp  ConvolutionModule.hpp  GaussianModule.cpp  GaussianModule.hpp  GradientModule.cpp  MergeChannelsModule.cpp  MergeChannelsModule.hpp  ResizeModule.cpp  SplitChannelsModule.cpp  SplitChannelsModule.hpp
code/modules/io/: CopyImageModule.cpp  LoadImageModule.cpp  LoadImagesModule.cpp  StoreImageModule.cpp
code/modules/tests/: improc_resize.sh  improc_resize_1.yml
code/public/: Data.hpp  Module.hpp
debian/: changelog  control  copyright  libuipf-dev.install  libuipf-geomview-dev.install  libuipf-geomview.install  libuipf.install  rules  shlibs  uipf-gui.install  uipf-modules-base.install  uipf.install
doc/guide/: README.md
doc/presentations/: uipf-sfm-thesis.pdfpc
